# DESKIMON-V1

./: .gitignore  branding.json  components_structure.txt  main_structure.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
assets/: left_eye.c
components/chmorgan__esp-audio-player/: CMakeLists.txt  audio_player.cpp
components/espressif__esp-sr/tool/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/Assets/: left_eye.c
main/Audio_Driver/: PCM5101.c  PCM5101.h
main/Cloud/: Cloud.c  Cloud.h  Cloud_Upload.c
main/LCD_Driver/: Display_SPD2010.c  Display_SPD2010.h
main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
main/LVGL_UI/: LVGL_Example.c  deskimon.c  deskimon.h
main/MIC_Driver/: MIC_Speech.c  MIC_Speech.h
main/Provisioning/: Provisioning.c  Provisioning.h  dns_server.c  dns_server.h  portal.html
main/Wireless/: Wireless.c  Wireless.h
supabase/migrations/: 001_initial_schema.sql  002_continuous_conversation.sql  003_public_select_policy.sql  004_disable_rls_preferences.sql
web_simulator/: index.html  script.js  style.css
webapp/: add_negative_keywords.js  intent_matcher.js  intents.json  intents_top100.json  latency_auditor.js  latency_auditor_api.js  memory_system.js  milestone_system.js  package-lock.json  package.json  register_device_programmatic.js  server_daemon.js  session.json  stress_test.js  stt_interface.js  subscribe_realtime.js  subscribe_realtime_new.js  test_all_intents.js  test_db.js  test_fallback.js  test_intents.js  test_memory.js  test_milestones.js  test_stt.js  test_tts.js  test_update_device.js  tts_provider.js  update_preferences.js  validate_optimized.js
webapp/providers/: cartesia_provider.js  gemini_provider.js  groq_provider.js
webapp/src/app/: globals.css  layout.js  page.js
webapp/src/app/dashboard/: layout.js  page.js
webapp/src/app/dashboard/appearance/: page.js
webapp/src/app/dashboard/diagnostics/: page.js
webapp/src/app/dashboard/network/: page.js
webapp/src/app/dashboard/personality/: page.js
webapp/src/app/dashboard/updates/: page.js
webapp/src/app/login/: page.js
webapp/src/lib/: branding.js  supabase.js  useActiveDevice.js
